--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Photo App",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "keywords": [
     "photo",
@@ -13,6 +14,10 @@
   "author": "Ali Altinok",
   "license": "ISC",
   "devDependencies": {
+    "nodemon": "^2.0.15",
     "prettier": "2.5.1"
+  },
+  "dependencies": {
+    "express": "^4.17.2"
   }
 }
