ReqBody && Created Model

--- a/.gitignore
+++ b/.gitignore
@@ -142,4 +142,7 @@ dist
 # SvelteKit build / generate output
 .svelte-kit
 
+#Test Files
+test.js
+
 # End of https://www.toptal.com/developers/gitignore/api/node
