--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "express-fileupload": "^1.3.1",
     "mongoose": "^6.1.8"
   }
 }
