--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-fileupload": "^1.3.1",
+    "method-override": "^3.0.0",
     "mongoose": "^6.1.8"
   }
 }
