--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Photo App",
   "main": "app.js",
   "scripts": {
-  "start": "node app.js"
+    "start": "node app.js"
   },
   "keywords": [
     "photo",
@@ -18,9 +18,17 @@
   },
   "dependencies": {
     "ejs": "^3.1.6",
-    "express": "^4.17.2",
+    "express": "^4.17.3",
     "express-fileupload": "^1.3.1",
     "method-override": "^3.0.0",
     "mongoose": "^6.1.8"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alialtinok/f1-gallery.git"
+  },
+  "bugs": {
+    "url": "https://github.com/alialtinok/f1-gallery/issues"
+  },
+  "homepage": "https://github.com/alialtinok/f1-gallery#readme"
 }
